manifest/objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>HealthPlan_Opt_In__c</fullName>
        <label>HealthPlan Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CPQ_Pricebook__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_non_IDN_Points__c</fullName>
        <formula>CASE(SBQQ__Opportunity2__r.HHS_Staffed_Bed_Size__c, &apos;0 - 349&apos;, 1, &apos;350 - 1.1K&apos;, 2, &apos;1.2K - 3.5K&apos;, 3, &apos;0 - 49&apos;, 1, &apos;50 - 114&apos;, 2, &apos;115 - 900&apos;, 3, 0) + 
CASE( SBQQ__Opportunity2__r.HHS_Employees__c, &apos;0 - 2K&apos;, 1, &apos;2.1K - 6.1K&apos;, 2, &apos;6.2K - 15K&apos;, 3, &apos;0 - 299&apos;, 1, &apos;300 - 899&apos;, 2, &apos;900 - 10K&apos;, 3, 0) + 
CASE( SBQQ__Opportunity2__r.HHS_Total_Revenue__c , &apos;$0 - $404M&apos;, 1, &apos;$405M - $1.2B&apos;, 2, &apos;$1.3B - $2.9B&apos;, 3, &apos;$1M- $49M&apos;, 1, &apos;$50M - $149M&apos;, 2, &apos;$150M - $2.98B&apos;, 3, 0) + 
CASE( SBQQ__Opportunity2__r.HHS_EBITDA__c , &apos;Red - 6.9M&apos;, 1, &apos;7M - 84.9M&apos;, 2, &apos;85M - 895M&apos;, 3, &apos;&gt; Red $1.5M&apos;, 1, &apos;Red $1.4M - $5M&apos;, 2, &apos;$6M - $394M&apos;, 3, 0) + 
CASE( SBQQ__Opportunity2__r.HHS_Outpatient_Visits__c, &apos;0 - 164K&apos;, 1, &apos;165K - 559K&apos;, 2, &apos;560K - 2.3M&apos;, 3, &apos;0 - 29K&apos;, 1, &apos;30K - 79K&apos;, 2, &apos;80K - 1.3M&apos;, 3, 0) + 
CASE( SBQQ__Opportunity2__r.HHS_Discharges__c, &apos;0 - 14.9K&apos;, 1, &apos;15K - 42.9K&apos;, 2, &apos;43K - 166K&apos;, 3, &apos;0 - 1.4K&apos;, 1, &apos;1.5K - 4.9K&apos;, 2, &apos;5K - 50K&apos;, 3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDN/non-IDN Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_in_Octiv_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by Octiv to determine if a fee page should be produced/included for this Quote based upon the Proposal Template selected on the Opportunity.</description>
        <inlineHelpText>This field is used by Octiv to determine if a fee page should be produced/included for this Quote based upon the Proposal Template selected on the Opportunity.</inlineHelpText>
        <label>Include in Octiv Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CPQ_Pricebook__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Insurance_Company</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Policy__c</fullName>
        <label>Insurance Policy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Insurance_Company__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Insurance_Policy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <inlineHelpText>ASO is for Opt In</inlineHelpText>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Livongo_Product_Count__c</fullName>
        <description>This field displays the CPQ summary variable Count of products on the Quote Line Items with the product family is Livongo</description>
        <inlineHelpText>This field displays the CPQ summary variable Count of products on the Quote Line Items with the product family is Livongo</inlineHelpText>
        <label>Livongo Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <inlineHelpText>This is the Quote Owner Manager&apos;s Email</inlineHelpText>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Net_ARR_With_PG__c</fullName>
        <description>RollupSummary from QuoteLine</description>
        <label>Net ARR With PG</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_ARR_With_PG__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_ARR__c</fullName>
        <label>Net ARR</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_ARR__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Annual_Amount_Calc__c</fullName>
        <description>Monthly Revenue x 12.  Used this formula so CPQ calculation service is not required.</description>
        <formula>Net_Monthly_Revenue__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Revenue x 12.  Used this formula so CPQ calculation service is not required.</inlineHelpText>
        <label>Net Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Revenue__c</fullName>
        <description>Sum of monthly price of all product at Quote Line level</description>
        <inlineHelpText>Sum of monthly price of all product at Quote Line level</inlineHelpText>
        <label>Net Monthly Revenue</label>
        <summarizedField>SBQQ__QuoteLine__c.Monthly_Price__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Lives__c</fullName>
        <formula>SBQQ__Opportunity2__r.Initial_of_Lives__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This reflects the number of lives from the parent Opportunity.</inlineHelpText>
        <label>Number of Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Octiv_Page_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is to increment the last page number in the dynamic Table of Contents</description>
        <inlineHelpText>This field is to increment the last page number in the dynamic Table of Contents</inlineHelpText>
        <label>Octiv Page Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneTime_NetTotal__c</fullName>
        <description>Roll-up Summary of all OneTime quote line net total</description>
        <label>OneTime Net Total</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OneTime_Net_Total_With_PG__c</fullName>
        <description>Estimated OneTime Net Total + Net ARR with PG</description>
        <formula>OneTime_NetTotal__c + Up_Front_Fee_Total__c +  Net_ARR_With_PG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OneTime_Net_Total__c</fullName>
        <formula>OneTime_NetTotal__c + Up_Front_Fee_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OneTime Net Total New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAccount__c</fullName>
        <formula>SBQQ__Opportunity2__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppStageName__c</fullName>
        <formula>TEXT( SBQQ__Opportunity2__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_Formula__c</fullName>
        <formula>TEXT(Opt_In__c)</formula>
        <label>Opt In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <description>Determines pricing if employer is opt-in or opt-out</description>
        <inlineHelpText>Determines pricing if employer is opt-in or opt-out</inlineHelpText>
        <label>Carrier Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CPQ_Pricebook__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_of_live_First__c</fullName>
        <formula>CASE(TEXT( Percentage_of_lives__c ), &apos;50/50&apos;, ROUND(Number_of_Lives__c*0.5,0), &apos;60/40&apos;, ROUND(Number_of_Lives__c*0.6,0),&apos;70/30&apos;,ROUND(Number_of_Lives__c*0.7,0), &apos;80/20&apos;,ROUND(Number_of_Lives__c*0.8,0),&apos;90/10&apos;,ROUND(Number_of_Lives__c*0.8,0),Number_of_Lives__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of live (Standard)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_live_Include__c</fullName>
        <formula>Number_of_Lives__c - Percent_of_live_First__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of live (Include)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_of_lives__c</fullName>
        <description>Percentages of lives for more than 1 GM Product.</description>
        <inlineHelpText>Percentages of lives for more than 1 GM Product.</inlineHelpText>
        <label>Percentage of lives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50/50</fullName>
                    <default>true</default>
                    <label>50/50</label>
                </value>
                <value>
                    <fullName>60/40</fullName>
                    <isActive>false</isActive>
                    <label>60/40</label>
                </value>
                <value>
                    <fullName>70/30</fullName>
                    <isActive>false</isActive>
                    <label>70/30</label>
                </value>
                <value>
                    <fullName>80/20</fullName>
                    <isActive>false</isActive>
                    <label>80/20</label>
                </value>
                <value>
                    <fullName>90/10</fullName>
                    <isActive>false</isActive>
                    <label>90/10</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CPQ_Pricebook__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO Pricing</fullName>
                </value>
                <value>
                    <fullName>Shared Savings 80-20</fullName>
                </value>
                <value>
                    <fullName>Shared Savings 60-40</fullName>
                </value>
                <value>
                    <fullName>Shared Risk</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Contracted Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <formula>TEXT(SBQQ__Opportunity2__r.Type_of_Provider_IDN__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hospital Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_of_Marketing_Products__c</fullName>
        <label>Qty of Marketing Products</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Family_No_formula__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Id_18__c</fullName>
        <description>Salesforce 18 digit ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>SBQQ__Opportunity2__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reoccurring_NetTotal__c</fullName>
        <description>Roll-up Summary of all Reoccurring Quote line Net Total</description>
        <label>Reoccurring NetTotal</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value>Fixed Price</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue_for_One_time__c</fullName>
        <description>Revenue for one-time flat fee (Marketing Products)</description>
        <inlineHelpText>Revenue for one-time flat fee (Marketing Products)</inlineHelpText>
        <label>Revenue for One-time</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Subscription_Type__c</field>
            <operation>notEqual</operation>
            <value>Renewable</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Run_CPQ_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>update this field to run the CPQ calculation</description>
        <label>Run CPQ Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account for this quote. Defaulted to the account for the opportunity when quote is created.</description>
        <inlineHelpText>The customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the amount additionally discounted on this quote.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AverageCustomerDiscount__c</fullName>
        <description>Average customer discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__ListAmount__c = 0, 0, ((SBQQ__ListAmount__c - SBQQ__CustomerAmount__c) / SBQQ__ListAmount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Customer Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__AveragePartnerDiscount__c</fullName>
        <description>Average partner discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__CustomerAmount__c = 0, 0, (SBQQ__CustomerAmount__c -  SBQQ__NetAmount__c) / SBQQ__CustomerAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average partner discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Partner Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingName__c</fullName>
        <description>Name for the Bill To address.</description>
        <inlineHelpText>Name for the Bill To address.</inlineHelpText>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingStreet__c</fullName>
        <description>Street portion of the billing address for this quote.</description>
        <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConsumptionRateOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read-only indicator to show whether a quote contains overriding consumption rates.</description>
        <inlineHelpText>Read-only indicator to show whether a quote contains overriding consumption rates.</inlineHelpText>
        <label>Consumption Rate Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Subscription End Date</fullName>
                    <default>true</default>
                    <label>By Subscription End Date</label>
                </value>
                <value>
                    <fullName>Single Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>This is a Roll-Up Summary field.</description>
        <inlineHelpText>This is a Roll-Up Summary field.</inlineHelpText>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscount__c</fullName>
        <description>Additional discount extended to customer.</description>
        <inlineHelpText>Additional discount extended to the customer on this quote. This value can be overridden at the individual line item level. Any line items that don&apos;t have additional discount explicitly specified will default to this value.</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DaysQuoteOpen__c</fullName>
        <description>Number of days the quote has been opened.</description>
        <formula>if(OR(ISPICKVAL( SBQQ__Status__c ,&quot;Draft&quot; ),ISPICKVAL( SBQQ__Status__c ,&quot;In Review&quot;),ISPICKVAL( SBQQ__Status__c , &quot;Approved&quot;), ISPICKVAL( SBQQ__Status__c , &quot;Presented&quot;)),Round(NOW() - CreatedDate,0) ,null)</formula>
        <inlineHelpText>Number of days the quote has been opened.</inlineHelpText>
        <label>Days Quote Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on &quot;Generate Document&quot; screen.</description>
        <inlineHelpText>Template that should be used with this quote. Salesforce CPQ automatically selects the template specified here when you click &quot;Generate Document&quot;</inlineHelpText>
        <label>Default Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeliveryMethod__c</fullName>
        <description>Method used to deliver products on this quote.</description>
        <inlineHelpText>Method used to deliver products on this quote.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Distributor discount that applies to this quote unless overridden on line item level.</description>
        <inlineHelpText>Distributor discount that applies to this quote unless overridden on line item level.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor for this quote. Defaulted from partner on opportunity with role of &quot;Distributor&quot;.</description>
        <inlineHelpText>Distributor for this quote. Defaulted from partner on opportunity with role of &quot;Distributor&quot;.</inlineHelpText>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Quotes</relationshipLabel>
        <relationshipName>DistributorQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentStatus__c</fullName>
        <description>Indicates the status of your Document.</description>
        <inlineHelpText>Indicates the status of your Document: Pending, Sent, Failed.</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EmailTemplateId__c</fullName>
        <description>ID of email template that will be pre-populated when documents generated from this quote are emailed.</description>
        <inlineHelpText>If you have a specific email template to use for documents generated and emailed from this quote, enter the email template ID here.</inlineHelpText>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>End date for subscriptions in this group.</description>
        <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c)),TODAY() + $Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c, null)</defaultValue>
        <description>Date after which the Quote is no longer valid</description>
        <inlineHelpText>Date after which the Quote is no longer valid</inlineHelpText>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__FirstSegmentTermEndDate__c</fullName>
        <description>Used with multi-segment Products to prorate first segment.</description>
        <inlineHelpText>For multi-segment Products, enter the end date in order to prorate first segment.</inlineHelpText>
        <label>First Segment Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on all adjusted quote line on quote if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on all adjusted quote line on quote if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Introduction__c</fullName>
        <description>Introduction that can be printed on the generated PDF document.</description>
        <inlineHelpText>Introduction that can be printed on the generated PDF document.</inlineHelpText>
        <label>Introduction</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Key__c</fullName>
        <description>Unique key used in identifying &quot;shopping cart&quot; quotes without relying on internal IDs.</description>
        <externalId>true</externalId>
        <inlineHelpText>Internal unique key used for identifying &quot;shopping cart&quot; quotes without relying on internal IDs</inlineHelpText>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__LastCalculatedOn__c</fullName>
        <description>The date and time this quote was last calculated.</description>
        <inlineHelpText>The date and time this quote was last calculated.</inlineHelpText>
        <label>Last Calculated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBQQ__LastSavedOn__c</fullName>
        <description>The date and time this quote was last saved.</description>
        <inlineHelpText>The date and time this quote was last saved.</inlineHelpText>
        <label>Last Saved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemCount__c</fullName>
        <description>Number of line items in this quote.</description>
        <inlineHelpText>Number of line items in this quote.</inlineHelpText>
        <label>Line Item Count</label>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsGrouped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option that allows you to use SolutionGroups(TM) or ad hoc groups to categorize and subtotal quote line items.</description>
        <inlineHelpText>Select this option to use SolutionGroups(TM) or add your own groups on the Edit Lines page to categorize and subtotal quote line items.</inlineHelpText>
        <label>Group Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsPrinted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Option which when checked prints individual line items on the PDF document.</description>
        <inlineHelpText>Select the checkbox to print individual line items on the generated PDF quote document for group quotes.</inlineHelpText>
        <label>Print Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListAmount__c</fullName>
        <description>Total List Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total List Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>List Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Default markup rate applied to line items on this quote.</description>
        <inlineHelpText>Default markup rate applied to line items on this quote. You&apos;ll be able to override this value on group and line item level.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>